<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">

        <include layout="@layout/app_bar"/>

        <ImageView
            android:id="@+id/ivLogo"
            android:contentDescription="@string/app_name"
            android:layout_width="@dimen/iconLogoSize"
            android:layout_height="@dimen/iconLogoSize"
            android:layout_marginTop="50dp"
            android:layout_gravity="center_horizontal"
            android:src="@mipmap/ic_launcher"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/app_name"/>

        <TextView
            android:id="@+id/tvVersion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingBottom="10dp"
            android:layout_marginBottom="15dp"
            android:onClick="showUpdateLog"
            android:text=""/>

        <TextView
            style="@style/DrawerMenuItem"
            android:background="@drawable/ripple_button_white"
            android:onClick="showUseHelp"
            android:text="@string/use_help"
            android:textColor="@color/colorDeepDark"/>

        <TextView
            style="@style/DrawerMenuItem"
            android:background="@drawable/ripple_button_white"
            android:layout_marginTop="1dp"
            android:onClick="showSpecialThanks"
            android:text="@string/special_thanks"
            android:textColor="@color/colorDeepDark"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lyBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/powered_by_android"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tvCopyright"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/copyright"
            android:textSize="12sp" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>